--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="sosmed">
               <input type="radio" id="teman">
-              <label for="teman">Teman</label>
+              <label for="teman">sosmed</label>
               </div>
           </div>
         <!-- tambahkan input text area -->
